[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nos-utils"
version = "0.1.0"
description = "NOAA NOS-OFS forcing generation utilities"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
full = ["netCDF4>=1.5", "scipy>=1.7", "cfgrib>=0.9"]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
