[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nos-utils"
version = "0.1.0"
description = "NOAA NOS-OFS forcing generation utilities"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.scripts]
nos-utils = "nos_utils.cli:main"

[project.optional-dependencies]
full = ["netCDF4>=1.5", "scipy>=1.7", "cfgrib>=0.9", "pyyaml>=5.4"]
dev = ["pytest", "pytest-cov", "pyyaml>=5.4"]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0", "sphinx-autodoc-typehints>=1.25"]

[tool.setuptools.packages.find]
include = ["nos_utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
